--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
 
 h1 {
   color: white;
-  font-family: Comic Sans;
+  font-family: Comic Sans MS;
 }
 
 p {
-  font-family: Comic Sans;
+  font-family: Comic Sans MS;
   font-size: 20px;
   text-align: center;
 }
