--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
 
 h1 {
   color: white;
-  font-family: Comic 'Gill Sans', 'Gill Sans MT';
+  font-family: cursive;
 }
 
 p {
-  font-family: Comic 'Gill Sans', 'Gill Sans MT';
+  font-family: cursive;
   font-size: 20px;
   text-align: center;
 }
